versions/v3.7.0/build/dts/api/bindings/input/cirque,pinnacle-spi.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/input/cirque,pinnacle-spi.html
original_path: build/dts/api/bindings/input/cirque,pinnacle-spi.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# cirque,pinnacle (on spi bus)

Vendor: [Cirque Corporation](../../bindings.md#dt-vendor-cirque)

## Description

```text
Cirque Pinnacle 1CA027 ASIC trackpad connected through SPI
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |
| `spi-max-frequency` | `int` | ```text Maximum clock frequency of device's SPI interface in Hz ```  This property is **required**. |
| `duplex` | `int` | ```text Duplex mode, full or half. By default it's always full duplex thus 0 as this is, by far, the most common mode. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0    SPI_FULL_DUPLEX   2048 SPI_HALF_DUPLEX ```  Legal values: `0`, `2048` |
| `frame-format` | `int` | ```text Motorola or TI frame format. By default it's always Motorola's, thus 0 as this is, by far, the most common format. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0     SPI_FRAME_FORMAT_MOTOROLA   32768 SPI_FRAME_FORMAT_TI ```  Legal values: `0`, `32768` |
| `spi-cpol` | `boolean` | ```text SPI clock polarity which indicates the clock idle state. If it is used, the clock idle state is logic high; otherwise, low. ``` |
| `spi-cpha` | `boolean` | ```text SPI clock phase that indicates on which edge data is sampled. If it is used, data is sampled on the second edge; otherwise, on the first edge. ``` |
| `spi-hold-cs` | `boolean` | ```text In some cases, it is necessary for the master to manage SPI chip select under software control, so that multiple spi transactions can be performed without releasing it. A typical use case is variable length SPI packets where the first spi transaction reads the length and the second spi transaction reads length bytes. ``` |
| `data-ready-gpios` | `phandle-array` | ```text Data Ready (DR) GPIO pin. The DR pin is connected to Pinnacle HW_DR which is active high when SW_DR or SW_CC are asserted. If connected directly, the MCU pin should be configured as active low. ``` |
| `sensitivity` | `string` | ```text ADC attenuation, 1x is the most sensitive and 4x is the least sensitive. ```  Default value: `4x`  Legal values: `'1x'`, `'2x'`, `'3x'`, `'4x'` |
| `data-mode` | `string` | ```text Data output mode in which position is reported. In the relative mode each position is reported as relative to the last position. In the absolute mode absolute coordinates are reported. ```  Default value: `relative`  Legal values: `'absolute'`, `'relative'` |
| `idle-packets-count` | `int` | ```text The number of empty packets where both X and Y are set to 0. They are started to be sent when a finger presence is detected missing (no touch detected) every 10 ms. They are stopped to be sent when a finger presence it detected. An application can count these packets in order to detect taps. When set to 0, no empty packets are sent. Supported values from 0 to 255. ``` |
| `clipping-enable` | `boolean` | ```text In the absolute mode enable clipping of reported coordinates which are outside of the active range. ``` |
| `active-range-x-min` | `int` | ```text The minimum X value which can be reported. ```  Default value: `128` |
| `active-range-x-max` | `int` | ```text The maximum X value which can be reported. ```  Default value: `1920` |
| `active-range-y-min` | `int` | ```text The minimum Y value which can be reported. ```  Default value: `64` |
| `active-range-y-max` | `int` | ```text The maximum Y value which can be reported. ```  Default value: `1472` |
| `scaling-enable` | `boolean` | ```text In the absolute mode enable scaling of coordinates according to the specified resolution for X and Y axises. The scaling is applied only when the clipping is enabled. ``` |
| `scaling-x-resolution` | `int` | ```text Resolution for the X axis. ```  Default value: `1024` |
| `scaling-y-resolution` | `int` | ```text Resolution for the Y axis. ```  Default value: `1024` |
| `invert-x` | `boolean` | ```text In the absolute mode invert X coordinate. ``` |
| `invert-y` | `boolean` | ```text In the absolute mode invert Y coordinate. ``` |
| `primary-tap-enable` | `boolean` | ```text In the relative mode enable the primary tap. ``` |
| `swap-xy` | `boolean` | ```text In the relative mode swap X and Y coordinates. This is equivalent for rotating coordinates by 90 degrees. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “cirque,pinnacle” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
